logs/pants-utils.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pants_utils'...
Listing './lib/python3.5/site-packages/pants_utils/django_apps'...
Listing './lib/python3.5/site-packages/pants_utils/django_apps/pexstaticfiles'...
Listing './lib/python3.5/site-packages/pants_utils/django_apps/pexstaticfiles/management'...
Listing './lib/python3.5/site-packages/pants_utils/django_apps/pexstaticfiles/management/commands'...
Listing './lib/python3.5/site-packages/pants_utils/django_apps/pextemplate'...
Compiling './lib/python3.5/site-packages/pants_utils/django_apps/pextemplate/loaders.py'...
***   File "./lib/python3.5/site-packages/pants_utils/django_apps/pextemplate/loaders.py", line 25
    raise TemplateDoesNotExist, template_name
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pants_utils/tornado_utils'...
Listing './lib/python3.5/site-packages/pants_utils-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/django_app'...
Listing './lib/python3.5/site-packages/tests/django_app/django_app'...
Listing './share'...
Listing './share/python-wheels'...
